--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,23 @@
 
 ## User settings
 xcuserdata/
+*.xcuserstate
+
+## Build generated
+build/
+DerivedData/
+*.moved-aside
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
 
 ## Obj-C/Swift specific
 *.hmap
-
-## App packaging
 *.ipa
 *.dSYM.zip
 *.dSYM
@@ -15,17 +27,63 @@ xcuserdata/
 Pods/
 Podfile.lock
 
-# Exclude .xcworkspace if using Pods
-*.xcworkspace
-
 # Carthage
 Carthage/Build/
+Carthage/Checkouts
 
 # fastlane
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+
+# Code Injection
+iOSInjectionProject/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Backup files
+*~.nib
+*.swp
+*.backup
+*.bak
+
+# IDE
+.idea/
+*.xcworkspace
+!*.xcodeproj/project.xcworkspace
+
+# App specific
+*.mobileprovision
+*.cer
+*.p12
+*.key
+*.certSigningRequest
+
+# Playgrounds
+timeline.xctimeline
+playground.xcworkspace
+
+# Swift Package Manager
+.build/
+.swiftpm/
+
+# Test results
+test-reports/
+coverage/
+
+# Other
+*.log
+.env
+*.xcarchive
+
 git rm -r --cached Pods
 git add .gitignore
 
