feat: implement AR plane detection, UX improvements, and in-AR photo capture
- Added semi-transparent plane visualization.
- Added scanning progress indicator: displays the number of detected horizontal and vertical planes, and readiness status for photo capture.
- Enabled feature points visualization for better depth and obstacle awareness.
- Camera button activation: enabled only after successful space scanning.
- Added visual feedback when the capture button is pressed.
- Added error handling and in-app diagnostic messages for easier troubleshooting.

--- a/ar-camera-objective-c/Info.plist
+++ b/ar-camera-objective-c/Info.plist
@@ -21,11 +21,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera access is required for AR photo capture</string>
+	<string>We need camera access to provide AR features.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Location access is required for photo metadata</string>
+	<string>We need your location to provide accurate AR positioning information.</string>
 	<key>NSMotionUsageDescription</key>
-	<string>Motion data is required for photo metadata</string>
+	<string>We need motion data to provide accurate AR positioning information.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Photo library access is required to save captured photos</string>
 	<key>UIApplicationSceneManifest</key>
@@ -56,5 +56,13 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>MetalCaptureEnabled</key>
+	<false/>
+	<key>MetalAPIValidation</key>
+	<false/>
+	<key>MetalShaderValidation</key>
+	<false/>
+	<key>MetalFastMathEnabled</key>
+	<true/>
 </dict>
 </plist>
